fixing image display on mobile for ridethru page

--- a/css/ridethru.css
+++ b/css/ridethru.css
@@ -151,6 +151,7 @@ hr {
     .bot-images {margin-top: 20px;}
     .right-images {margin-top: 20px;}
 	.mid-images {margin-top: 20px;}
+	#page-content img {min-width: 100%;}
 }
 
 /* Tablet and desktop */
